--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ build
 # Ignore copyright webfonts
 dev/extra/fonts
 
+# Ignore images
+dev/media/images
+
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
