ignore vendor folder

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ dev/extra/fonts
 # Ignore images
 dev/media/images
 
+# Ignore vendor scripts
+dev/scripts/vendor
+
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
