updated modules / added vote content

--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "description": "Wordpress theme for North & Navy",
   "main": "gulpfile.js",
   "devDependencies": {
-    "cheerio": "^0.18.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.1.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-livereload": "^3.7.0",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-css": "^0.4.6",
-    "gulp-rename": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-inject": "^1.5.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rsync": "^0.0.5",
-    "gulp-ruby-haml": "^0.0.3",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-svgstore": "^5.0.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.4",
-    "imagemin-pngcrush": "^4.0.0"
+    "gulp-ruby-haml": "0.0.4",
+    "gulp-ruby-sass": "^1.1.0",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-svgstore": "^5.0.4",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "imagemin-pngcrush": "^4.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
